--- a/HOF.html
+++ b/HOF.html
@@ -15,7 +15,7 @@
 <script>
     // foreach , map , find , findIndex , every , some , reduce , filter
 
-    let arr = ['1', 2, 3, 4, 5, 6, 7, 8, 9, 10]
+    let arr = ['1', 5 , 2, 3, 4, 5, 6, 7, 8, 9, 10]
     arr.includes(67)
 
     let myForEach = arr.forEach((num, index, y) => {
@@ -60,6 +60,15 @@
     })
 
     console.log(foundNum);
+
+    let findIndexOfNum = arr.findIndex((num, index, array) => {
+        return num === '5'
+    })
+
+    console.log(findIndexOfNum);
+
+    
+
 
 
 
