--- a/authentication/Dashboard.html
+++ b/authentication/Dashboard.html
@@ -12,8 +12,8 @@
         <button id="button1">log out</button>
     </p>
 
-    <input type="file" id="filePicker" onchange="pickPicture()" accept=".png">
-    <img width="100" height="100" id="image" src="" alt="">
+    <input type="file" id="filePicker" onchange="pickPicture(event)" accept=".png">
+    <img width="100" height="100" id="image" src="" alt="" onclick="runSmth(event)">
 
 
 </body>
@@ -40,8 +40,8 @@
     }
 
 
-    function pickPicture() {
-        let inputFile = document.getElementById('filePicker').files[0]
+    function pickPicture(ev) {
+        let inputFile = ev.target.files[0]
         let reader = new FileReader()
         if (inputFile) {
             reader.readAsDataURL(inputFile);
@@ -51,6 +51,10 @@
             image.src = result
             console.log(result);
         })
+    }
+
+    function runSmth(ev) {
+        console.log(ev.target);
     }
 
 </script>
