--- a/teachFirebase/public/dashboard.html
+++ b/teachFirebase/public/dashboard.html
@@ -7,14 +7,33 @@
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/11.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.8.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.8.0/firebase-database-compat.js"></script>
+
+
 </head>
 
 <body>
 
     <div style="display: flex; justify-content: space-between;">
         <h1> Welcome <b id="username"> loading... </b> </h1>
-
+        <button onclick="settings()"> settings </button>
         <button onclick="signOut()"> logout </button>
+    </div>
+
+    <div>
+        <div>
+            <input type="text" id="message">
+            <button onclick="sendMessage()"> send message </button>
+        </div>
+
+        <div id="preview">
+
+
+        </div>
+
+
+
+
     </div>
 
 </body>
@@ -25,6 +44,7 @@
     const firebaseConfig = {
         apiKey: "AIzaSyAXzZ7Eg4068JONW422p4aqOP3LTrAK3RQ",
         authDomain: "april-43ed6.firebaseapp.com",
+        databaseURL: "https://april-43ed6-default-rtdb.firebaseio.com",
         projectId: "april-43ed6",
         storageBucket: "april-43ed6.firebasestorage.app",
         messagingSenderId: "649232150590",
@@ -35,6 +55,8 @@
     // Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
+    const database = firebase.database();
+    let chatIndex
 
 
     function checkUser() {
@@ -47,7 +69,7 @@
             }
         });
     }
-    
+
 
     checkUser()
 
@@ -59,5 +81,65 @@
             alert(error.message)
         });
     }
+
+
+    function settings() {
+        window.location.href = 'settings.html'
+    }
+
+    function sendMessage() {
+        if (!message.value.trim()) {
+            alert('please attach a message')
+            return
+        }
+        if ((!chatIndex && chatIndex !== 0) || chatIndex < 0) {
+            alert('cant send a message at the moment')
+            return
+        }
+
+
+        database.ref('chats/' + chatIndex).set({
+            message: message.value.trim(),
+            sender: auth.currentUser.displayName,
+            time: new Date().toLocaleTimeString()
+        }).then((res) => {
+
+            console.log(res);
+
+        }).catch((err) => alert(err))
+
+
+    }
+
+    function displayMessages() {
+
+        firebase.database().ref('chats').on('value', (snapshot) => {
+            const data = snapshot.val();
+            chatIndex = data.length
+            preview.innerHTML = ''
+            data.forEach((chat, i) => {
+                let classVal = chat.sender == auth.currentUser ? 'left' : 'right'
+
+                preview.innerHTML += ` <div class="${classVal}" > <p> message: ${chat.message} </p>
+                <p> time: ${chat.time} </p> 
+                <p > sender: ${chat.sender} </p> 
+                </div>`
+            });
+
+        });
+    }
+
+
+    displayMessages()
+
+    // let obj = {
+    //     man: 'wisdom',
+    //     skill: () => {
+    //         return { message: 'javascript ', sender: 'man', time: '10:30pm' }
+    //     }
+    // }
+
+    // obj.skill()
+
 
 </script>
